--- a/oas_docs/output/kibana.serverless.yaml
+++ b/oas_docs/output/kibana.serverless.yaml
@@ -13783,6 +13783,7 @@ components:
           type: string
       required:
         - name
+        - type
     Fleet_output_create_request_kafka:
       title: kafka
       type: object
@@ -14044,6 +14045,7 @@ components:
           type: string
       required:
         - name
+        - type
     Fleet_output_update_request:
       discriminator:
         mapping:
@@ -14272,6 +14274,7 @@ components:
           type: string
       required:
         - name
+        - type
     Fleet_output_update_request_logstash:
       title: logstash
       type: object
@@ -14334,6 +14337,7 @@ components:
           type: string
       required:
         - name
+        - type
     Fleet_package_info:
       title: Package information
       type: object
