--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -28659,6 +28659,7 @@ components:
           type: string
       required:
         - name
+        - type
     Fleet_output_create_request_kafka:
       title: kafka
       type: object
@@ -28920,6 +28921,7 @@ components:
           type: string
       required:
         - name
+        - type
     Fleet_output_update_request:
       discriminator:
         mapping:
@@ -29148,6 +29150,7 @@ components:
           type: string
       required:
         - name
+        - type
     Fleet_output_update_request_logstash:
       title: logstash
       type: object
@@ -29210,6 +29213,7 @@ components:
           type: string
       required:
         - name
+        - type
     Fleet_package_info:
       title: Package information
       type: object
