--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -922,9 +922,9 @@ packages/kbn-test-eui-helpers @elastic/kibana-visualizations
 x-pack/test/licensing_plugin/plugins/test_feature_usage @elastic/kibana-security
 packages/kbn-test-jest-helpers @elastic/kibana-operations @elastic/appex-qa
 packages/kbn-test-subj-selector @elastic/kibana-operations @elastic/appex-qa
-x-pack/test_serverless 
-test 
-x-pack/test 
+x-pack/test_serverless
+test
+x-pack/test
 x-pack/performance @elastic/appex-qa
 x-pack/examples/testing_embedded_lens @elastic/kibana-visualizations
 x-pack/examples/third_party_lens_navigation_prompt @elastic/kibana-visualizations
@@ -1308,6 +1308,9 @@ x-pack/test_serverless/**/test_suites/observability/ai_assistant @elastic/obs-ai
 /.devcontainer/ @elastic/kibana-operations
 
 # Appex QA
+/x-pack/test_serverless/README.md @elastic/appex-qa
+/x-pack/test_serverless/api_integration/ftr_provider_context.d.ts @elastic/appex-qa
+/x-pack/test_serverless/api_integration/test_suites/common/README.md @elastic/appex-qa
 /src/dev/code_coverage @elastic/appex-qa
 /test/functional/services/common @elastic/appex-qa
 /test/functional/services/lib @elastic/appex-qa
@@ -1467,6 +1470,7 @@ x-pack/test/api_integration/apis/management/index_management/inference_endpoints
 /x-pack/test/plugin_functional/test_suites/resolver/ @elastic/security-solution
 /x-pack/test/security_solution_api_integration @elastic/security-solution
 /x-pack/test/api_integration/apis/security_solution @elastic/security-solution
+/x-pack/test_serverless/functional/test_suites/security/cypress @elastic/security-solution
 #CC# /x-pack/plugins/security_solution/ @elastic/security-solution
 
 # Security Solution OpenAPI bundles
