--- a/package.json
+++ b/package.json
@@ -1198,10 +1198,10 @@
     "rbush": "^3.0.1",
     "re-resizable": "^6.9.9",
     "re2js": "0.4.1",
-    "react": "^17.0.2",
+    "react": "~18.2.0",
     "react-ace": "^7.0.5",
     "react-diff-view": "^3.2.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "~18.2.0",
     "react-dropzone": "^4.2.9",
     "react-fast-compare": "^2.0.4",
     "react-grid-layout": "^1.3.4",
@@ -1618,7 +1618,7 @@
     "@types/react-router-config": "^5.0.7",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-syntax-highlighter": "^15.4.0",
-    "@types/react-test-renderer": "^17.0.2",
+    "@types/react-test-renderer": "~18.0.0",
     "@types/react-virtualized": "^9.21.22",
     "@types/react-window": "^1.8.8",
     "@types/react-window-infinite-loader": "^1.0.9",
@@ -1793,7 +1793,7 @@
     "prettier": "^2.8.8",
     "proxy": "^2.1.1",
     "raw-loader": "^3.1.0",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "~18.2.0",
     "recast": "^0.23.9",
     "regenerate": "^1.4.0",
     "resolve": "^1.22.0",
