--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -416,6 +416,7 @@ src/platform/packages/shared/content-management/content_list/kbn-content-list-mo
 src/platform/packages/shared/content-management/content_list/kbn-content-list-provider @elastic/appex-sharedux
 src/platform/packages/shared/content-management/content_list/kbn-content-list-provider-client @elastic/appex-sharedux
 src/platform/packages/shared/content-management/content_list/kbn-content-list-provider-server @elastic/appex-sharedux
+src/platform/packages/shared/content-management/content_list/kbn-content-list-table @elastic/appex-sharedux
 src/platform/packages/shared/content-management/favorites/favorites_common @elastic/appex-sharedux
 src/platform/packages/shared/content-management/favorites/favorites_public @elastic/appex-sharedux
 src/platform/packages/shared/content-management/favorites/favorites_server @elastic/appex-sharedux
