[pre-req] Add mock custom field, `status`

--- a/src/platform/packages/shared/content-management/content_list/kbn-content-list-mock-data/tsconfig.json
+++ b/src/platform/packages/shared/content-management/content_list/kbn-content-list-mock-data/tsconfig.json
@@ -19,6 +19,9 @@
   ],
   "kbn_references": [
     "@kbn/content-management-table-list-view-common",
+    "@kbn/content-list-provider",
+    "@kbn/content-management-tags",
+    "@kbn/content-management-favorites-public",
     "@kbn/user-profile-components"
   ],
   "exclude": [
