--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -417,6 +417,7 @@ src/platform/packages/shared/content-management/content_list/kbn-content-list-pr
 src/platform/packages/shared/content-management/content_list/kbn-content-list-provider-client @elastic/appex-sharedux
 src/platform/packages/shared/content-management/content_list/kbn-content-list-provider-server @elastic/appex-sharedux
 src/platform/packages/shared/content-management/content_list/kbn-content-list-table @elastic/appex-sharedux
+src/platform/packages/shared/content-management/content_list/kbn-content-list-toolbar @elastic/appex-sharedux
 src/platform/packages/shared/content-management/favorites/favorites_common @elastic/appex-sharedux
 src/platform/packages/shared/content-management/favorites/favorites_public @elastic/appex-sharedux
 src/platform/packages/shared/content-management/favorites/favorites_server @elastic/appex-sharedux
