[post] Examples and recipes

--- a/package.json
+++ b/package.json
@@ -1556,6 +1556,7 @@
     "@kbn/cli-dev-mode": "link:packages/kbn-cli-dev-mode",
     "@kbn/code-editor-mock": "link:src/platform/packages/shared/shared-ux/code_editor/mocks",
     "@kbn/code-owners": "link:src/platform/packages/private/kbn-code-owners",
+    "@kbn/content-list-docs": "link:src/platform/packages/shared/content-management/content_list/kbn-content-list-docs",
     "@kbn/content-list-mock-data": "link:src/platform/packages/shared/content-management/content_list/kbn-content-list-mock-data",
     "@kbn/content-management-storybook": "link:src/platform/packages/shared/content-management/kbn-content-management-storybook",
     "@kbn/core-analytics-browser-mocks": "link:src/core/packages/analytics/browser-mocks",
