[pre req] Create /list endpoint to use SO search API

--- a/src/platform/plugins/shared/content_management/moon.yml
+++ b/src/platform/plugins/shared/content_management/moon.yml
@@ -34,6 +34,9 @@ dependsOn:
   - '@kbn/object-versioning-utils'
   - '@kbn/core-http-router-server-mocks'
   - '@kbn/react-query'
+  - '@kbn/core-logging-server-mocks'
+  - '@kbn/core-saved-objects-utils-server'
+  - '@kbn/user-profile-components'
 tags:
   - plugin
   - prod
