--- a/src/platform/plugins/shared/content_management/tsconfig.json
+++ b/src/platform/plugins/shared/content_management/tsconfig.json
@@ -21,6 +21,9 @@
     "@kbn/object-versioning-utils",
     "@kbn/core-http-router-server-mocks",
     "@kbn/react-query",
+    "@kbn/core-logging-server-mocks",
+    "@kbn/core-saved-objects-utils-server",
+    "@kbn/user-profile-components",
   ],
   "exclude": [
     "target/**/*",
