--- a/x-pack/platform/plugins/shared/maps/moon.yml
+++ b/x-pack/platform/plugins/shared/maps/moon.yml
@@ -73,15 +73,12 @@ dependsOn:
   - '@kbn/core-saved-objects-server'
   - '@kbn/maps-vector-tile-utils'
   - '@kbn/core-http-common'
-  - '@kbn/content-management-table-list-view-table'
-  - '@kbn/content-management-table-list-view'
   - '@kbn/serverless'
   - '@kbn/logging'
   - '@kbn/chart-expressions-common'
   - '@kbn/search-errors'
   - '@kbn/search-response-warnings'
   - '@kbn/calculate-width-from-char-count'
-  - '@kbn/content-management-table-list-view-common'
   - '@kbn/esql'
   - '@kbn/es-types'
   - '@kbn/data-service'
@@ -108,6 +105,13 @@ dependsOn:
   - '@kbn/crypto-browser'
   - '@kbn/cps'
   - '@kbn/kql'
+  - '@kbn/content-list-provider'
+  - '@kbn/content-management-content-editor'
+  - '@kbn/content-list-provider-client'
+  - '@kbn/content-list-provider-server'
+  - '@kbn/content-management-table-list-view-common'
+  - '@kbn/content-list-table'
+  - '@kbn/content-list-toolbar'
 tags:
   - plugin
   - prod
