--- a/src/platform/plugins/shared/dashboard/moon.yml
+++ b/src/platform/plugins/shared/dashboard/moon.yml
@@ -113,6 +113,12 @@ dependsOn:
   - '@kbn/core-chrome-app-menu-components'
   - '@kbn/core-chrome-app-menu'
   - '@kbn/test-jest-helpers'
+  - '@kbn/content-list-provider'
+  - '@kbn/content-list-provider-client'
+  - '@kbn/content-list-provider-server'
+  - '@kbn/content-list-table'
+  - '@kbn/content-list-toolbar'
+  - '@kbn/content-list-grid'
 tags:
   - plugin
   - prod
