chore(renovate): sync reviewers from CODEOWNERS usage
- Add @kbn/renovate-reviewer-sync and scripts/sync_renovate_reviewers.js
- Support mode-first rollout via x_kbn_reviewer_sync (report-only default, sync, fixed)
- Add scheduled main-only Buildkite pipeline that opens/updates PRs for managed drift
- Make scheduled pipeline visible: fail + annotate on managed drift, missing coverage, or no-computed-reviewers
- Route reviews to computed teams; avoid re-pinging unchanged teams on existing bot PR

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -88,6 +88,7 @@ packages/kbn-plugin-check @elastic/appex-sharedux
 packages/kbn-plugin-generator @elastic/kibana-operations
 packages/kbn-plugin-helpers @elastic/kibana-operations
 packages/kbn-relocate @elastic/kibana-core
+packages/kbn-renovate-reviewer-sync @elastic/kibana-operations
 packages/kbn-repo-file-maps @elastic/kibana-operations
 packages/kbn-repo-linter @elastic/kibana-operations
 packages/kbn-repo-source-classifier @elastic/kibana-operations
