Add drag and drop reordering for processing

--- a/package.json
+++ b/package.json
@@ -114,6 +114,8 @@
     "@apidevtools/json-schema-ref-parser": "14.1.1",
     "@appland/sql-parser": "1.5.1",
     "@arizeai/openinference-semantic-conventions": "1.1.0",
+    "@atlaskit/pragmatic-drag-and-drop": "1.7.7",
+    "@atlaskit/pragmatic-drag-and-drop-hitbox": "1.1.0",
     "@aws-sdk/client-bedrock-runtime": "3.883.0",
     "@babel/runtime": "7.28.4",
     "@dagrejs/dagre": "1.1.8",
