--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "@elastic/ecs": "9.0.0",
     "@elastic/elasticsearch": "9.1.1",
     "@elastic/ems-client": "8.6.3",
-    "@elastic/eui": "file:./eui_time_picker2_a.tgz",
+    "@elastic/eui": "file:./eui_time_picker2_beed41d.tgz",
     "@elastic/eui-theme-borealis": "5.3.0",
     "@elastic/eui-theme-common": "7.3.0",
     "@elastic/filesaver": "1.1.2",
