Changes from node scripts/check_mappings_update --fix

--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -3390,6 +3390,9 @@
       "sessionId": {
         "type": "keyword"
       },
+      "status": {
+        "type": "keyword"
+      },
       "username": {
         "type": "keyword"
       }
