--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -59,6 +59,7 @@ jobs:
         sha: ${{ env.CHECKOUT_SHA }}
         output: sarif-results
     - name: Dismiss alerts
+      id: dismiss-alerts
       continue-on-error: true
       uses: advanced-security/dismiss-alerts@046d6b48d2e43cf563f96f67332c47c432eff83e # 2.0.2
       env:
@@ -66,6 +67,38 @@ jobs:
       with:
         sarif-id: ${{ steps.analyze.outputs.sarif-id }}
         sarif-file: sarif-results/${{ matrix.language }}.sarif
+
+    - name: Notify Slack on suppression failure
+      if: steps.dismiss-alerts.outcome == 'failure'
+      continue-on-error: true
+      uses: slackapi/slack-github-action@91efab103c0de0a537f72a35f6b8cda0ee76bf0a # v2.1.1
+      with:
+        method: chat.postMessage
+        token: ${{ secrets.CODE_SCANNING_SLACK_TOKEN }}
+        payload: |
+          channel: ${{ secrets.CODE_SCANNING_SLACK_CHANNEL_ID }}
+          "blocks": [
+            {
+              "type": "section",
+              "text": {
+                "type": "mrkdwn",
+                "text": ":warning: CodeQL alerts suppression step failed for ${{ github.repository }}."
+              }
+            },
+            {
+              "type": "actions",
+              "elements": [
+                {
+                  "type": "button",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "View Workflow Run"
+                  },
+                  "url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                }
+              ]
+            }
+          ]
   alert:
     name: Alert
     runs-on: ubuntu-latest
