--- a/docs/reference/toc.yml
+++ b/docs/reference/toc.yml
@@ -37,6 +37,7 @@ toc:
           - file: connectors-kibana/bedrock-action-type.md
           - file: connectors-kibana/elastic-managed-llm.md
           - file: connectors-kibana/gemini-action-type.md
+          - file: connectors-kibana/mcp-action-type.md
           - file: connectors-kibana/openai-action-type.md
       - file: connectors-kibana/elastic-connectors.md
         children:
