--- a/src/platform/plugins/shared/discover/moon.yml
+++ b/src/platform/plugins/shared/discover/moon.yml
@@ -127,6 +127,7 @@ dependsOn:
   - '@kbn/unified-metrics-grid'
   - '@kbn/shared-ux-link-redirect-app'
   - '@kbn/react-query'
+  - '@kbn/shared-ux-error-boundary'
 tags:
   - plugin
   - prod
