--- a/src/platform/plugins/shared/discover/moon.yml
+++ b/src/platform/plugins/shared/discover/moon.yml
@@ -129,6 +129,7 @@ dependsOn:
   - '@kbn/shared-ux-link-redirect-app'
   - '@kbn/background-search'
   - '@kbn/react-query'
+  - '@kbn/shared-ux-error-boundary'
 tags:
   - plugin
   - prod
