Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/streams_app/tsconfig.json
+++ b/x-pack/platform/plugins/shared/streams_app/tsconfig.json
@@ -105,6 +105,6 @@
     "@kbn/test-jest-helpers",
     "@kbn/react-query",
     "@kbn/timerange",
-    "@kbn/ftr-llm-proxy",
+    "@kbn/inference-common",
   ]
 }
