Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/streams_app/moon.yml
+++ b/x-pack/platform/plugins/shared/streams_app/moon.yml
@@ -106,7 +106,7 @@ dependsOn:
   - '@kbn/test-jest-helpers'
   - '@kbn/react-query'
   - '@kbn/timerange'
-  - '@kbn/ftr-llm-proxy'
+  - '@kbn/inference-common'
 tags:
   - plugin
   - prod
