--- a/x-pack/solutions/security/plugins/security_solution/kibana.jsonc
+++ b/x-pack/solutions/security/plugins/security_solution/kibana.jsonc
@@ -82,7 +82,8 @@
       "serverless",
       "agentBuilder",
       "llmTasks",
-      "workflowsManagement"
+      "workflowsManagement",
+      "workflowsExtensions"
     ],
     "requiredBundles": [
       "esUiShared",
