feat: create & manage slo from service inventory

--- a/x-pack/solutions/observability/plugins/apm/kibana.jsonc
+++ b/x-pack/solutions/observability/plugins/apm/kibana.jsonc
@@ -27,6 +27,7 @@
       "observabilityShared",
       "exploratoryView",
       "ruleRegistry",
+      "slo",
       "triggersActionsUi",
       "share",
       "unifiedSearch",
