Addressing review comments

--- a/config/serverless.workplaceai.yml
+++ b/config/serverless.workplaceai.yml
@@ -1,7 +1,7 @@
 # Workplace AI Project Config
 
 # Make sure the plugins belonging to this project type are loaded
-plugins.allowlistPluginGroups: ['platform', 'workplaceai']
+plugins.allowlistPluginGroups: ['platform', 'workplaceai', 'search']
 
 ## Enable the Serverless Workplace AI plugin
 xpack.serverless.workplaceAI.enabled: true
