Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/solutions/security/packages/siem-readiness/tsconfig.json
+++ b/x-pack/solutions/security/packages/siem-readiness/tsconfig.json
@@ -18,5 +18,7 @@
     "@kbn/kibana-react-plugin",
     "@kbn/core",
     "@kbn/react-query",
+    "@kbn/security-solution-plugin",
+    "@kbn/fleet-plugin",
   ]
 }
