--- a/x-pack/solutions/security/packages/siem-readiness/moon.yml
+++ b/x-pack/solutions/security/packages/siem-readiness/moon.yml
@@ -21,6 +21,8 @@ dependsOn:
   - '@kbn/kibana-react-plugin'
   - '@kbn/core'
   - '@kbn/react-query'
+  - '@kbn/security-solution-plugin'
+  - '@kbn/fleet-plugin'
 tags:
   - shared-browser
   - package
