added 'profiling' to scout_ci_config.yml

--- a/.buildkite/scout_ci_config.yml
+++ b/.buildkite/scout_ci_config.yml
@@ -8,6 +8,7 @@ plugins:
     - maps
     - observability_onboarding
     - painless_lab
+    - profiling
     - security_solution
     - spaces
     - streams_app
