Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/dashboard_enhanced/moon.yml
+++ b/x-pack/platform/plugins/shared/dashboard_enhanced/moon.yml
@@ -35,6 +35,7 @@ dependsOn:
   - '@kbn/presentation-publishing'
   - '@kbn/deeplinks-analytics'
   - '@kbn/presentation-util'
+  - '@kbn/presentation-util-plugin'
 tags:
   - plugin
   - prod
