--- a/x-pack/platform/plugins/shared/dashboard_enhanced/tsconfig.json
+++ b/x-pack/platform/plugins/shared/dashboard_enhanced/tsconfig.json
@@ -21,8 +21,7 @@
     "@kbn/presentation-containers",
     "@kbn/presentation-publishing",
     "@kbn/deeplinks-analytics",
-    "@kbn/presentation-util",
-    "@kbn/presentation-util-plugin"
+    "@kbn/presentation-util"
   ],
   "exclude": ["target/**/*"]
 }
