--- a/x-pack/platform/plugins/shared/dashboard_agent/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/dashboard_agent/kibana.jsonc
@@ -14,6 +14,7 @@
     ],
     "requiredPlugins": [
       "agentBuilder",
+      "agentBuilderPlatform",
       "dashboard"
     ],
     "optionalPlugins": [
