--- a/x-pack/solutions/observability/plugins/observability/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/observability/tsconfig.json
@@ -145,7 +145,8 @@
     "@kbn/fleet-plugin",
     "@kbn/ai-assistant-common",
     "@kbn/management-settings-ids",
-    "@kbn/observability-agent-builder-plugin"
+    "@kbn/observability-agent-builder-plugin",
+    "@kbn/code-editor"
   ],
   "exclude": ["target/**/*"]
 }
