Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/automatic_import_v2/tsconfig.json
+++ b/x-pack/platform/plugins/shared/automatic_import_v2/tsconfig.json
@@ -45,5 +45,6 @@
     "@kbn/management-settings-ids",
     "@kbn/langchain",
     "@kbn/core-lifecycle-browser-mocks",
+    "@kbn/core-http-server-mocks",
   ]
 }
