--- a/x-pack/platform/plugins/shared/automatic_import_v2/moon.yml
+++ b/x-pack/platform/plugins/shared/automatic_import_v2/moon.yml
@@ -49,6 +49,7 @@ dependsOn:
   - '@kbn/management-settings-ids'
   - '@kbn/langchain'
   - '@kbn/core-lifecycle-browser-mocks'
+  - '@kbn/core-http-server-mocks'
 tags:
   - plugin
   - prod
