--- a/docs/reference/toc.yml
+++ b/docs/reference/toc.yml
@@ -76,6 +76,7 @@ toc:
           - file: connectors-kibana/alienvault-otx-action-type.md
           - file: connectors-kibana/brave-search-action-type.md
           - file: connectors-kibana/greynoise-action-type.md
+          - file: connectors-kibana/jina-action-type.md
           - file: connectors-kibana/notion-action-type.md
           - file: connectors-kibana/shodan-action-type.md
           - file: connectors-kibana/urlvoid-action-type.md
