--- a/x-pack/solutions/observability/plugins/apm/moon.yml
+++ b/x-pack/solutions/observability/plugins/apm/moon.yml
@@ -153,6 +153,8 @@ dependsOn:
   - '@kbn/agent-builder-plugin'
   - '@kbn/observability-agent-builder-plugin'
   - '@kbn/kql'
+  - '@kbn/slo-schema'
+  - '@kbn/slo-plugin'
 tags:
   - plugin
   - prod
