--- a/x-pack/platform/test/moon.yml
+++ b/x-pack/platform/test/moon.yml
@@ -169,6 +169,7 @@ dependsOn:
   - '@kbn/dashboard-plugin'
   - '@kbn/automatic-import-v2-plugin'
   - '@kbn/connector-specs'
+  - '@kbn/osquery-plugin'
 tags:
   - test-helper
   - package
