Setup default llm settings if user has actions privileges

--- a/x-pack/platform/plugins/shared/cloud_connect/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/cloud_connect/kibana.jsonc
@@ -18,7 +18,8 @@
       "management",
       "features",
       "encryptedSavedObjects",
-      "licensing"
+      "licensing",
+      "actions"
     ],
     "optionalPlugins": [
       "cloud"
