--- a/x-pack/solutions/observability/test/ensemble/synthetics/scalability_dev.yaml
+++ b/x-pack/solutions/observability/test/ensemble/synthetics/scalability_dev.yaml
@@ -194,6 +194,11 @@ steps:
           echo "Forge output:"
           cat $OUTPUT_FILE
 
+  - name: Wait for enrollment token to be active
+    type: builtin.wait
+    with:
+      time: 10
+
   - name: Deploy Elastic Agent
     id: deploy_agent
     type: providers.shell.run
