--- a/.buildkite/pipelines/on_merge.yml
+++ b/.buildkite/pipelines/on_merge.yml
@@ -411,6 +411,7 @@ steps:
       provider: gcp
       enableNestedVirtualization: true
       machineType: n2-standard-4
+      diskSizeGb: 105
     timeout_in_minutes: 75
     parallelism: 20
     retry:
@@ -426,6 +427,7 @@ steps:
       provider: gcp
       machineType: n2-standard-4
       preemptible: true
+      diskSizeGb: 105
     timeout_in_minutes: 120
     parallelism: 3
     retry:
