--- a/package.json
+++ b/package.json
@@ -1086,7 +1086,7 @@
     "@mapbox/mapbox-gl-rtl-text": "0.2.3",
     "@mapbox/mapbox-gl-supported": "2.0.1",
     "@mapbox/vector-tile": "1.3.1",
-    "@modelcontextprotocol/sdk": "^1.24.2",
+    "@modelcontextprotocol/sdk": "1.25.2",
     "@moonrepo/cli": "1.41.7",
     "@n8n/json-schema-to-zod": "^1.1.0",
     "@openfeature/core": "^1.9.1",
