[CodeQL] Enabled inline suppression (#247975)
## Summary

Enabled inline suppression, refer to
https://github.com/github/codeql/blob/main/javascript/ql/src/AlertSuppression.ql
 
Syntax
-  ✅ `// codeql[js/path-injection] Ignored for X reason`
- ❌ `// codeql[js/path-injection, js/command-injection]`
- ❌ `// codeql[*]`
- ❌ `// codeql[js/*]`
- ❌ `// codeql[js/path-injection]`

> [!NOTE]
> Alerts are suppressed with `Suppressed via SARIF` comment (while spec
supports [justification
property](https://docs.oasis-open.org/sarif/sarif/v2.0/csprd02/sarif-v2.0-csprd02.html#_Toc10127930),
CodeQL reporter doesn't emit it).
> I have a test PR with suppressed alerts examples
https://github.com/elastic/kibana/pull/248070

Suppressions query checks for comments `// codeql[rule-id]` and adds
`suppressions` property to the sarif file for the corresponding rule. It
doesn't ignore already existing alerts for that rule, that's why we need
to process the supressions output separately. For details refer to
https://github.com/advanced-security/dismiss-alerts?tab=readme-ov-file#high-level-architecture.

 
 
 <details>
  <summary>How to get sarif results and check suppressions</summary>

From the spec: [suppressions
property](https://docs.oasis-open.org/sarif/sarif/v2.0/csprd02/sarif-v2.0-csprd02.html#_Toc10127852)
is an array that only has the status per entry:
- `accepted`: The suppression is accepted.
- `underReview`: The engineering team is discussing the result to decide
if they will suppress it.
- `rejected`: The engineering team decided not to suppress the result.

  
 You can use the following script
 
 ```js
 import { Octokit } from '@octokit/rest';

const GITHUB_OWNER = 'elastic';
const GITHUB_REPO = 'kibana';

const octokit = new Octokit({ auth: '<YOUR_TOKEN>' });

const main = async () => {
 // actually gets the metadata
  const response = await octokit.codeScanning.getSarif({
    owner: GITHUB_OWNER,
    repo: GITHUB_REPO,
    sarif_id: '<YOUR_SARIF_ID>',
  });

  const analysesU

--- a/renovate.json
+++ b/renovate.json
@@ -3661,7 +3661,8 @@
       "groupName": "CodeQL",
       "matchPackageNames": [
         "github/codeql-action/analyze",
-        "github/codeql-action/init"
+        "github/codeql-action/init",
+        "advanced-security/dismiss-alerts"
       ],
       "matchManagers": [
         "github-actions"
