--- a/config/serverless.security.complete.yml
+++ b/config/serverless.security.complete.yml
@@ -43,3 +43,63 @@ xpack.actions.preconfigured:
       inferenceId: ".openai-gpt-oss-120b-chat_completion"
       providerConfig:
         model_id: "openai-gpt-oss-120b"
+  OpenAI-GPT-4-1:
+    name: OpenAI GPT-4.1
+    actionTypeId: .inference
+    exposeConfig: true
+    config:
+      provider: "elastic"
+      taskType: "chat_completion"
+      inferenceId: ".openai-gpt-4.1-chat_completion"
+      providerConfig:
+        model_id: "openai-gpt-4.1"
+  OpenAI-GPT-4-1-Mini:
+    name: OpenAI GPT-4.1
+    actionTypeId: .inference
+    exposeConfig: true
+    config:
+      provider: "elastic"
+      taskType: "chat_completion"
+      inferenceId: ".openai-gpt-4.1-mini-chat_completion"
+      providerConfig:
+        model_id: "openai-gpt-4.1-mini"
+  OpenAI-GPT-5-2:
+    name: OpenAI GPT-5.2
+    actionTypeId: .inference
+    exposeConfig: true
+    config:
+      provider: "elastic"
+      taskType: "chat_completion"
+      inferenceId: ".openai-gpt-5.2-chat_completion"
+      providerConfig:
+        model_id: "openai-gpt-5.2"
+  OpenAI-GPT-OSS-20B:
+    name: OpenAI GPT-OSS 20B
+    actionTypeId: .inference
+    exposeConfig: true
+    config:
+      provider: "elastic"
+      taskType: "chat_completion"
+      inferenceId: ".openai-gpt-oss-20b-chat_completion"
+      providerConfig:
+        model_id: "openai-gpt-oss-20b"
+  Google-Gemini-3-0-Pro:
+    name: Google Gemini 3.0 Pro
+    actionTypeId: .inference
+    exposeConfig: true
+    config:
+      provider: "elastic"
+      taskType: "chat_completion"
+      inferenceId: ".google-gemini-3.0-pro-chat_completion"
+      providerConfig:
+        model_id: "google-gemini-3.0-pro"
+  Google-Gemini-3-0-Flash:
+    name: Google Gemini 3.0 Flash
+    actionTypeId: .inference
+    exposeConfig: true
+    config:
+      provider: "elastic"
+      taskType: "chat_completion"
+      inferenceId: ".google-gemini-3.0-flash-chat_completion"
+      providerConfig:
+        model_id: "google-gemini-3.0-flash"
