Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/dashboard_agent/tsconfig.json
+++ b/x-pack/platform/plugins/shared/dashboard_agent/tsconfig.json
@@ -18,6 +18,7 @@
     "@kbn/lens-common-2",
     "@kbn/share-plugin",
     "@kbn/dashboard-markdown",
+    "@kbn/agent-builder-platform-plugin",
   ],
   "exclude": ["target/**/*"]
 }
