--- a/src/platform/packages/private/kbn-esql-editor/tsconfig.json
+++ b/src/platform/packages/private/kbn-esql-editor/tsconfig.json
@@ -38,7 +38,8 @@
     "@kbn/react-hooks",
     "@kbn/react-kibana-context-theme",
     "@kbn/calculate-width-from-char-count",
-    "@kbn/shared-ux-utility"
+    "@kbn/shared-ux-utility",
+    "@kbn/react-field"
   ],
   "exclude": [
     "target/**/*",
