--- a/x-pack/platform/plugins/shared/dashboard_agent/moon.yml
+++ b/x-pack/platform/plugins/shared/dashboard_agent/moon.yml
@@ -31,6 +31,7 @@ dependsOn:
   - '@kbn/lens-common-2'
   - '@kbn/share-plugin'
   - '@kbn/dashboard-markdown'
+  - '@kbn/agent-builder-platform-plugin'
 tags:
   - plugin
   - prod
