--- a/src/platform/packages/private/kbn-esql-editor/moon.yml
+++ b/src/platform/packages/private/kbn-esql-editor/moon.yml
@@ -44,6 +44,7 @@ dependsOn:
   - '@kbn/react-kibana-context-theme'
   - '@kbn/calculate-width-from-char-count'
   - '@kbn/shared-ux-utility'
+  - '@kbn/react-field'
 tags:
   - shared-browser
   - package
