--- a/x-pack/solutions/workplaceai/plugins/workplace_ai_app/tsconfig.json
+++ b/x-pack/solutions/workplaceai/plugins/workplace_ai_app/tsconfig.json
@@ -41,7 +41,8 @@
     "@kbn/triggers-actions-ui-plugin",
     "@kbn/elastic-assistant",
     "@kbn/ai-assistant-connector-selector-action",
-    "@kbn/core-application-browser"
+    "@kbn/core-application-browser",
+    "@kbn/workflows-extensions"
   ],
   "exclude": [
     "target/**/*",
