--- a/x-pack/solutions/workplaceai/plugins/workplace_ai_app/tsconfig.json
+++ b/x-pack/solutions/workplaceai/plugins/workplace_ai_app/tsconfig.json
@@ -42,7 +42,9 @@
     "@kbn/elastic-assistant",
     "@kbn/ai-assistant-connector-selector-action",
     "@kbn/core-application-browser",
-    "@kbn/workflows-extensions"
+    "@kbn/workflows-extensions",
+    "@kbn/zod",
+    "@kbn/workflows"
   ],
   "exclude": [
     "target/**/*",
