Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/solutions/workplaceai/plugins/workplace_ai_app/moon.yml
+++ b/x-pack/solutions/workplaceai/plugins/workplace_ai_app/moon.yml
@@ -47,6 +47,9 @@ dependsOn:
   - '@kbn/elastic-assistant'
   - '@kbn/ai-assistant-connector-selector-action'
   - '@kbn/core-application-browser'
+  - '@kbn/workflows-extensions'
+  - '@kbn/zod'
+  - '@kbn/workflows'
 tags:
   - plugin
   - prod
