new connector formalizations

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2769,6 +2769,11 @@ x-pack/solutions/security/test/security_solution_api_integration/test_suites/inv
 /x-pack/platform/plugins/shared/stack_connectors/server/usage/inference @elastic/appex-ai-infra
 /src/platform/packages/shared/kbn-connector-schemas/inference @elastic/appex-ai-infra @elastic/security-generative-ai @elastic/obs-ai-team
 
+# HTTP
+/x-pack/platform/plugins/shared/stack_connectors/public/connector_types/http @elastic/workflows-eng
+/x-pack/platform/plugins/shared/stack_connectors/server/connector_types/http @elastic/workflows-eng
+/src/platform/packages/shared/kbn-connector-schemas/http @elastic/workflows-eng
+
 # Token tracking
 x-pack/platform/plugins/shared/actions/server/lib/token_tracking @elastic/security-generative-ai
 
