--- a/src/platform/plugins/shared/dashboard/moon.yml
+++ b/src/platform/plugins/shared/dashboard/moon.yml
@@ -126,6 +126,7 @@ fileGroups:
     - common/**/*
     - public/**/*
     - server/**/*
+    - test/scout/**/*
     - '!target/**/*'
 tasks:
   jest:
