First pass at EARS tester

--- a/config/serverless.workplaceai.yml
+++ b/config/serverless.workplaceai.yml
@@ -20,6 +20,9 @@ uiSettings.overrides:
 ## Enable workplace_ai plugins
 xpack.workplaceAIApp.enabled: true
 
+## EARS (elastic-auth-redirect-service) integration
+xpack.workplaceAIApp.ears.url: https://localhost:8052
+
 # Disable spaces
 xpack.spaces.maxSpaces: 1
 
