--- a/config/serverless.workplaceai.yml
+++ b/config/serverless.workplaceai.yml
@@ -22,6 +22,7 @@ xpack.workplaceAIApp.enabled: true
 
 ## EARS (elastic-auth-redirect-service) integration
 xpack.workplaceAIApp.ears.url: https://localhost:8052
+xpack.workplaceAIApp.ears.allow_insecure: true
 
 # Disable spaces
 xpack.spaces.maxSpaces: 1
