Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/solutions/security/plugins/elastic_assistant/tsconfig.json
+++ b/x-pack/solutions/security/plugins/elastic_assistant/tsconfig.json
@@ -102,6 +102,7 @@
     "@kbn/core-ui-settings-browser-mocks",
     "@kbn/management-settings-ids",
     "@kbn/agent-builder-plugin",
+    "@kbn/cloud-plugin",
   ],
   "exclude": [
     "target/**/*",
