--- a/x-pack/solutions/security/plugins/security_solution/tsconfig.json
+++ b/x-pack/solutions/security/plugins/security_solution/tsconfig.json
@@ -270,6 +270,7 @@
     "@kbn/agent-builder-browser",
     "@kbn/ai-assistant-common",
     "@kbn/product-doc-common",
-    "@kbn/kql"
+    "@kbn/kql",
+    "@kbn/babel-register"
   ]
 }
