Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/solutions/security/plugins/security_solution/moon.yml
+++ b/x-pack/solutions/security/plugins/security_solution/moon.yml
@@ -270,6 +270,7 @@ dependsOn:
   - '@kbn/ai-assistant-common'
   - '@kbn/product-doc-common'
   - '@kbn/kql'
+  - '@kbn/babel-register'
 tags:
   - plugin
   - prod
