Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
+++ b/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
@@ -37,7 +37,8 @@
     "@kbn/es-errors",
     "@kbn/zod",
     "@kbn/esql-composer",
-    "@kbn/core-di-internal"
+    "@kbn/core-di-internal",
+    "@kbn/safer-lodash-set"
   ],
   "exclude": ["target/**/*"]
 }
