--- a/x-pack/solutions/security/plugins/security_solution/tsconfig.json
+++ b/x-pack/solutions/security/plugins/security_solution/tsconfig.json
@@ -271,6 +271,7 @@
     "@kbn/ai-assistant-common",
     "@kbn/product-doc-common",
     "@kbn/kql",
-    "@kbn/babel-register"
+    "@kbn/babel-register",
+    "@kbn/core-security-common"
   ]
 }
