Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/solutions/security/plugins/security_solution/moon.yml
+++ b/x-pack/solutions/security/plugins/security_solution/moon.yml
@@ -271,6 +271,7 @@ dependsOn:
   - '@kbn/product-doc-common'
   - '@kbn/kql'
   - '@kbn/babel-register'
+  - '@kbn/core-security-common'
 tags:
   - plugin
   - prod
