--- a/x-pack/platform/plugins/shared/data_sources/moon.yml
+++ b/x-pack/platform/plugins/shared/data_sources/moon.yml
@@ -47,6 +47,7 @@ dependsOn:
   - '@kbn/agent-builder-plugin'
   - '@kbn/deeplinks-workflows'
   - '@kbn/deeplinks-agent-builder'
+  - '@kbn/connector-schemas'
 tags:
   - plugin
   - prod
