--- a/src/platform/plugins/shared/discover/tsconfig.json
+++ b/src/platform/plugins/shared/discover/tsconfig.json
@@ -124,6 +124,7 @@
     "@kbn/controls-renderer",
     "@kbn/core-chrome-app-menu-components",
     "@kbn/shared-ux-error-boundary",
+    "@kbn/core-chrome-app-menu",
   ],
   "exclude": ["target/**/*"]
 }
