--- a/src/platform/plugins/shared/discover/moon.yml
+++ b/src/platform/plugins/shared/discover/moon.yml
@@ -131,6 +131,7 @@ dependsOn:
   - '@kbn/controls-renderer'
   - '@kbn/core-chrome-app-menu-components'
   - '@kbn/shared-ux-error-boundary'
+  - '@kbn/core-chrome-app-menu'
 tags:
   - plugin
   - prod
