improve lens api scripts

--- a/package.json
+++ b/package.json
@@ -38,19 +38,19 @@
   },
   "author": "Rashid Khan <rashid.khan@elastic.co>",
   "scripts": {
+    "build:lens-docs": "node scripts/capture_oas_snapshot --include-path /api/lens --no-serverless --update",
+    "bundle:lens-docs": "cd oas_docs && make lens-docs",
+    "lens-docs": "yarn build:lens-docs && yarn bundle:lens-docs",
     "backport-skip-ci": "backport --prDescription \"[skip-ci]\"",
     "build": "node --no-experimental-require-module scripts/build --all-platforms",
     "build:apidocs": "node --no-experimental-require-module scripts/build_api_docs",
-    "build:lens-docs": "node scripts/capture_oas_snapshot --include-path /api/lens --no-serverless --update",
     "checkLicenses": "node --no-experimental-require-module scripts/check_licenses --dev",
     "debug": "node --no-experimental-require-module --nolazy --inspect scripts/kibana --dev",
     "debug-break": "node --no-experimental-require-module --nolazy --inspect-brk scripts/kibana --dev",
-    "deploy:lens-docs": "cd oas_docs && make lens-docs",
     "dev-docs": "scripts/dev_docs.sh",
     "es": "node --no-experimental-require-module scripts/es",
     "preinstall": "node --no-experimental-require-module ./preinstall_check",
     "kbn": "node --no-experimental-require-module scripts/kbn",
-    "lens-docs": "yarn build:lens-docs && yarn deploy:lens-docs",
     "lint": "yarn run lint:es && yarn run lint:style",
     "lint:es": "node --no-experimental-require-module scripts/eslint_all_files",
     "lint:style": "node --no-experimental-require-module scripts/stylelint",
