--- a/src/core/packages/chrome/app-menu/core-chrome-app-menu-components/tsconfig.json
+++ b/src/core/packages/chrome/app-menu/core-chrome-app-menu-components/tsconfig.json
@@ -6,6 +6,7 @@
       "jest",
       "node",
       "react",
+      "@kbn/ambient-storybook-types",
     ]
   },
   "include": [
@@ -18,5 +19,6 @@
   "kbn_references": [
     "@kbn/split-button",
     "@kbn/i18n",
+    "@kbn/storybook",
   ]
 }
