--- a/package.json
+++ b/package.json
@@ -1215,6 +1215,7 @@
     "@opentelemetry/context-async-hooks": "2.2.0",
     "@opentelemetry/exporter-metrics-otlp-grpc": "0.208.0",
     "@opentelemetry/exporter-metrics-otlp-http": "0.208.0",
+    "@opentelemetry/exporter-metrics-otlp-proto": "0.208.0",
     "@opentelemetry/exporter-prometheus": "0.208.0",
     "@opentelemetry/exporter-trace-otlp-grpc": "0.208.0",
     "@opentelemetry/exporter-trace-otlp-http": "0.208.0",
