--- a/.github/workflows/codeql-pr.yml
+++ b/.github/workflows/codeql-pr.yml
@@ -3,7 +3,7 @@ name: "CodeQL PR"
 on:
   pull_request:
     branches: [ "main" ]
-    types: [ opened, ready_for_review ]
+    types: [ opened, ready_for_review, synchronize ]
 
 jobs:
 
