--- a/src/core/packages/chrome/browser-internal/tsconfig.json
+++ b/src/core/packages/chrome/browser-internal/tsconfig.json
@@ -68,6 +68,7 @@
     "@kbn/core-chrome-app-menu-components",
     "@kbn/shared-ux-label-formatter",
     "@kbn/core-chrome-sidebar",
+    "@kbn/core-chrome-sidebar-context",
   ],
   "exclude": [
     "target/**/*",
