--- a/src/core/packages/chrome/sidebar-types/tsconfig.json
+++ b/src/core/packages/chrome/sidebar-types/tsconfig.json
@@ -5,10 +5,11 @@
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx",
   ],
   "exclude": [
     "target/**/*"
   ],
-  "kbn_references": []
+  "kbn_references": [
+    "@kbn/zod",
+  ]
 }
