Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/solutions/observability/plugins/observability/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/observability/tsconfig.json
@@ -147,6 +147,7 @@
     "@kbn/management-settings-ids",
     "@kbn/observability-agent-builder-plugin",
     "@kbn/kql",
+    "@kbn/lens-common",
   ],
   "exclude": ["target/**/*"]
 }
